fixed animation z-index bg bug for /welcome + /login

--- a/src/components/FormCard/FormCard.module.css
+++ b/src/components/FormCard/FormCard.module.css
@@ -1,7 +1,7 @@
 
 
 .form-card {
-    background-color: rgb(13, 19, 35);
+    background-color: rgb(1, 1, 1);
     width: 460px;
     height: 380px;
     border-radius: 10px;
