--- a/src/pages/Choose/Choose.module.css
+++ b/src/pages/Choose/Choose.module.css
@@ -31,8 +31,8 @@
 }
 
 .box {
-    width: 200px;
-    height: 200px;
+    width: 225px;
+    height: 225px;
     background: var(--bg-white);
     color: black;
     padding: 8px;
