--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -12,7 +12,7 @@
 }
 
 .area{
-    background: #4e54c8;  
+    /* background: #4e54c8;   */
     background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);  
     width: 100%;
     height:100vh;
@@ -27,6 +27,7 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
+    z-index: -1;
 }
 
 .circles li{
@@ -115,6 +116,14 @@
     height: 150px;
     animation-delay: 0s;
     animation-duration: 11s;
+}
+
+.circles li:nth-child(11){
+    right: 75%;
+    width: 100px;
+    height: 100px;
+    animation-delay: 5s;
+    animation-duration: 7s;
 }
 
 
